@@ -77,6 +77,7 @@ cmdline_parse (int key, char *arg, struct argp_state *state)
   switch (key)
     {
     case ARGP_KEY_ARG:
+      /* Too many arguments. */
       argp_usage (state);
       break;
     case ARGP_KEY_END:
